Fixed spacing and broke layout two. Will attempt to fix.

--- a/Practice/style.css
+++ b/Practice/style.css
@@ -38,6 +38,7 @@ p {
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  column-gap: 50px;
 }
 
 /*container div contains each practice item in a 2 column by x row grid.*/
@@ -83,6 +84,7 @@ p {
 .headtofootGridOne {
   display: grid;
   grid-template-rows: 1fr 4fr 1fr;
+  height: 800px;
 }
 
 .headOne, .headTwo {
@@ -139,9 +141,10 @@ p {
 
 /*Layout one is a flexible example layout with several sections.*/
 
-.headtofoodGridTwo {
+.headtofootGridTwo {
   display: grid;
   grid-template-rows: 1fr 3fr 2fr 1fr;
+  height: 800px;
 }
 
 .lefttorightGridTwoA {
